--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -254,6 +254,8 @@
                                     <project-name>${project.name}</project-name>
                                     <project-version>${project.version}</project-version>
                                     <final-name>${project.build.finalName}</final-name>
+                                    <snippets-core>${project.basedir}/target/generated-snippets</snippets-core>
+                                    <snippets-user>${project.basedir}/../user-profile/target/generated-snippets</snippets-user>
                                 </attributes>
                             </configuration>
                         </execution>
