--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
 
 after_success:
 - cp $TRAVIS_BUILD_DIR/core/target/generated-docs/module-core.html $TRAVIS_BUILD_DIR/index.html
-- cp $TRAVIS_BUILD_DIR/user-profile/target/generated-docs/user-profile.html $TRAVIS_BUILD_DIR/user-profile.html
+- cp $TRAVIS_BUILD_DIR/user-profile/target/generated-docs/module-core.html $TRAVIS_BUILD_DIR/user-profile.html
 
 deploy:
   provider: pages
@@ -26,4 +26,4 @@ deploy:
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: false
   on:
-    branch: master
+    branch: doc-for-user-profile
