Add short description

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -262,6 +262,7 @@
                     </executions>
                 </plugin>
 
+                <!-- Ktlint can check and reformat smelling code-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-antrun-plugin</artifactId>
