--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ script:
 # -B batch mode makes Maven less verbose
   - mvn -B clean verify
 
-if: branch IS OSS-9
+git:
+  if: branch IS master
     after_success:
       # copy generated documentation to github pages directory
       - cp $TRAVIS_BUILD_DIR/core/target/generated-docs/module-core.html $TRAVIS_BUILD_DIR/index.html
@@ -29,5 +30,5 @@ if: branch IS OSS-9
       - git add $TRAVIS_BUILD_DIR/hermes.html
       - git commit -m "Deploy number ${TRAVIS_BUILD_NUMBER} to GitHub Pages [ci skip]"
       - git push --quiet "https://${GITHUB_TOKEN}@${GH_REF}" OSS-9:gh-pages > /dev/null 2>&1
-# To generate GITHUB_TOKEN: Click in right upper options menu -> settings -> Developer settings ->
-  # Personal access tokens -> Generate new token
+      # To generate GITHUB_TOKEN: Click in right upper options menu -> settings -> Developer settings ->
+      # Personal access tokens -> Generate new token
