--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ after_success:
   - git config user.name "${GH_USER_NAME}"
   - git config user.email "${GH_USER_EMAIL}"
   - git add $TRAVIS_BUILD_DIR/index.html
-  - git add $TRAVIS_BUILD_DIR/user-profile.html
-  - git add $TRAVIS_BUILD_DIR/hermes.html
+  #- git add $TRAVIS_BUILD_DIR/user-profile.html
+  #- git add $TRAVIS_BUILD_DIR/hermes.html
   - git commit -m "Deploy number ${TRAVIS_BUILD_NUMBER} to GitHub Pages [ci skip]"
   - git push --quiet "https://${GITHUB_TOKEN}@${GH_REF}" master:gh-pages > /dev/null 2>&1
   # To generate GITHUB_TOKEN: Click in right upper options menu -> settings -> Developer settings ->
