separate sudo from explanation, delete explanation at end

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 
 # To generate GITHUB_TOKEN go to:
 # "upper right corner options menu" -> settings -> Developer settings -> 
-# Personal access tokens -> Generate new tokensudo: required
+# Personal access tokens -> Generate new token
+sudo: required
 
 language: java
 
@@ -30,5 +31,3 @@ deploy:
   keep-history: false
   on:
     branch: master
-  # To generate GITHUB_TOKEN: Click in right upper options menu -> settings -> Developer settings ->
-  # Personal access tokens -> Generate new token
