Oss 9 (#83) - Cleanup gh-pages branch
* Returning to dismissed gh-pages deployment conf travis.yml

* add configuration to push to gh-pages

* Repaired travis.yml format

* Repaired travis.yml format

* add git section

* Reformat travis.yml

* Change branch to OSS-9

* Delete if

* add force

* change in push method

* Change push command

* add head

* add head:

* change push command

* hide rest of documentation

* change branch origin

* return to previos gh pages conf, add local dir opt

* switch master to oss-9 for gh pages tests

* add hermes doc

* set description and definitive branch

* add token explanation again

* separate sudo from explanation, delete explanation at end

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 
 # To generate GITHUB_TOKEN go to:
 # "upper right corner options menu" -> settings -> Developer settings -> 
-# Personal access tokens -> Generate new tokensudo: required
+# Personal access tokens -> Generate new token
+sudo: required
 
 language: java
 
@@ -19,11 +20,12 @@ script:
   - mvn -B clean verify
 
 after_success:
-- cp $TRAVIS_BUILD_DIR/core/target/generated-docs/module-core.html $TRAVIS_BUILD_DIR/index.html
-- cp $TRAVIS_BUILD_DIR/user-profile/target/generated-docs/module-core.html $TRAVIS_BUILD_DIR/user-profile.html
+- cp $TRAVIS_BUILD_DIR/core/target/generated-docs/module-core.html $TRAVIS_BUILD_DIR/docs/index.html
+- cp $TRAVIS_BUILD_DIR/user-profile/target/generated-docs/module-core.html $TRAVIS_BUILD_DIR/docs/user-profile.html
 
 deploy:
   provider: pages
+  local-dir: docs # set the folder which contains files that are going to be deployed...very important!!!
   skip-cleanup: true
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: false
